--- a/templates/student_app/signup_student.html
+++ b/templates/student_app/signup_student.html
@@ -1,5 +1,4 @@
-{% extends 'base/base.html' %} {% block title %}Student Signup - MyAcademia{%
-endblock %} {% block extra_css %}
+{% extends 'base/base.html' %} {% block title %}Student Signup - MyAcademia{%endblock %} {% block extra_css %}
 <style>
   body {
     margin: 0;
