--- a/templates/teacher_app/login.html
+++ b/templates/teacher_app/login.html
@@ -1,5 +1,4 @@
-{% extends 'base/base.html' %} {% block title %}Teacher Login - MyAcademia{%
-endblock %} {% block extra_css %}
+{% extends 'base/base.html' %} {% block title %}Teacher Login - MyAcademia{%endblock %} {% block extra_css %}
 <style>
   * {
     margin: 0;
