--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -184,87 +184,37 @@
           </a>
         </li>
 
-        {% if user.is_authenticated %} {% if user.teacherprofile %}
-        <!-- Teacher Menu -->
+        {% if user.is_authenticated %}
         <li class="nav-item">
+          {% if user.teacher_profile %}
           <a class="nav-link" href="{% url 'teacher_app:teacher_dashboard' %}">
             <i class="fas fa-tachometer-alt me-1"></i>Dashboard
           </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="teacherDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <i class="fas fa-chalkboard-teacher me-1"></i>{{
-            user.first_name|default:user.username }}
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><h6 class="dropdown-header">Teacher Portal</h6></li>
-            <li>
-              <a
-                class="dropdown-item"
-                href="{% url 'teacher_app:teacher_dashboard' %}"
-              >
-                <i class="fas fa-tachometer-alt"></i>Dashboard
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-clipboard-list"></i>Manage Results
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-users"></i>My Students
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-chart-bar"></i>Analytics
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-user-edit"></i>Profile Settings
-              </a>
-            </li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a
-                class="dropdown-item"
-                href="{% url 'teacher_app:teacher_logout' %}"
-              >
-                <i class="fas fa-sign-out-alt"></i>Logout
-              </a>
-            </li>
-          </ul>
-        </li>
-        {% else %}
-        <!-- Student Menu -->
-        <li class="nav-item">
+          {% elif user.student_profile %}
           <a class="nav-link" href="{% url 'student_dashboard' %}">
             <i class="fas fa-tachometer-alt me-1"></i>Dashboard
           </a>
+          {% else %}
+          <a class="nav-link" href="#">
+            <i class="fas fa-tachometer-alt me-1"></i>Dashboard
+          </a>
+          {% endif %}
         </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
-            id="studentDropdown"
+            id="userDropdown"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
+            style="display: flex; align-items: center; gap: 0.4rem"
           >
-            <i class="fas fa-user-graduate me-1"></i>{{
-            user.first_name|default:user.username }}
+            <i class="fas fa-user me-1"></i>
+            <span>{{ user.first_name|default:user.username }}</span>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><h6 class="dropdown-header">Student Portal</h6></li>
+            <li><h6 class="dropdown-header">Account</h6></li>
             <li>
               <a class="dropdown-item" href="{% url 'student_dashboard' %}">
                 <i class="fas fa-tachometer-alt"></i>Dashboard
@@ -298,7 +248,7 @@
             </li>
           </ul>
         </li>
-        {% endif %} {% else %}
+        {% else %}
         <!-- Login/Signup Options for non-authenticated users -->
         <li class="nav-item">
           <a class="nav-link" href="#features">
