--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -66,6 +66,8 @@
     </div>
     {% endblock %}
 
+    <!-- Footer -->
+
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
