--- a/templates/teacher_app/signup.html
+++ b/templates/teacher_app/signup.html
@@ -1,5 +1,4 @@
-{% extends 'base/base.html' %} {% block title %}Teacher Signup - MyAcademia{%
-endblock %} {% block extra_css %}
+{% extends 'base/base.html' %} {% block title %}Teacher Signup - MyAcademia{%endblock %} {% block extra_css %}
 <style>
   body {
     margin: 0;
